what I've done so far. copied part of view_statistics.html into view_project.html and tried making an example. Does not work :(

--- a/teamwork/static/css/stats.css
+++ b/teamwork/static/css/stats.css
@@ -28,6 +28,7 @@ statistics
 /* your colors */
 .legend .in { background-color: #1789D4; }
 .legend .out { background-color: #CB4B16; }
+.legend .names{ background-color:  }
 .legend .count { float: right; margin-right: 20px; }
 
 .ScrollStyle
