--- a/teamwork/templates/projects/view_project.html
+++ b/teamwork/templates/projects/view_project.html
@@ -4,6 +4,8 @@
 
 {# Clear out javascript block at bottom of page so we can import specific js #}
 {% block javascript %}
+
+
 <script src="{% static 'js/jquery-2.2.3.min.js' %}"></script>
 
 <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
@@ -36,6 +38,11 @@
   {{ block.super }}
 
   <!-- fullCalendar 2.2.5-->
+
+<!-- TESTING FROM STATS.CSS-->
+  <link rel="stylesheet" href="{% static 'css/stats.css' %}">
+<!-- END TESTING FROM STATS.CSS-->
+
   <link rel="stylesheet" href="{% static 'css/fullcalendar.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/fullcalendar.print.css' %}" media="print">
   <link rel="stylesheet" href="{% static 'css/Scrollbar.css' %}">
@@ -955,26 +962,87 @@
                 
              <!--CURRENTLY HARDCODE PROTOTYPE: NOT FUNCTIONAL-->
                 <form action = "">
+
                     <h5 style="position: relative; left:40px; top: 100px">TSR Number:</h5>
                     <select  style=" position:relative; left:150px; top: 60px" name="TSR #">
                         <!-- goes through each of the tsrs and print the tsr number-->
                         {% for each in assigned_tsrs %}
                             <option value="each">{{each.ass_number}}</option>
                         {% endfor %}
-
                     </select>
+
+                    <div class="col-md-6">
+                        <div class="box box-primary">
+                            <div class="panel panel-default">
+                                <div class="panel-body" style="position: relative; min-height: 170px; min-width: 100px">
+                                    <input type="hidden" id="total_students" name="variable" value="{{ num_total }}">
+                                    <input type="hidden" id="total_projects" name="variable" value="{{ num_projects }}">
+                                    <input type="hidden" id="students_not" name="variable" value="{{ num_not }}">
+                                    <input type="hidden" id="students_projects" name="variable" value="{{ num_in }}">
+                                    <input type="hidden" id="all_members" name="variable" value="{{members}}">
+
+<!-- how to take input from dropdown list ...?-->
+                                    {%for name in members.profile.name%}
+                                        <input type="hidden" id="{{name}}" name="variable" value="{{name}}">
+                                        <input type="hidden" id="{{name_length}}" name="variable" value="{{name_length}}">
+                                    {% endfor %}
+                                    <div style="position: absolute; width: 70px, height: 70px;">
+                                        <canvas id="bar" style="z-index: 1;"></canvas>
+                                    </div>
+                                    <div style="position: absolute; top: 10px; right: 10px">
+                                        <ul class="legend">
+                                            <li><h3><span class="in"></span> IN <b>{{num_in}}</b></h3></li>
+                                            <li><h3><span class="out"></span> OUT <b>{{num_not}}</b></h3></li>
+                                            {% for nameAndLength in name_length%}
+                                                <li><h3><span class="in"></span>{{nameAndLength.1}}<b> {{nameAndLength.0}}</b></h3></li>
+                                            {% endfor %}
+<!-- I think you can try using an objects id or you can try a counter-->
+<!-- 
+    html is hot. gross.
+    ** doing coding things in html is gross
+
+    **super hot. gross.
+    **disgustingly hot. okay
+
+    okay wait, do you know how to take input from the drop down list? or has it been done before?like click on a name and go?
+ go? like get data or change url? oh wait, I could check the other drop downlist that they have.you'd prbably need a form -> gross.
+
+ Do you know where name is? like in the project  class in models.py?
+
+ what do you mean?
+ {{ forloop.counter }} : {{ pmed.medicine }} -->
+                                        </ul>
+                                    </div>
+                                </div>
+
+                                <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
+                                <script type="text/javascript" src="{% static 'js/Chart.min.js' %}"></script>
+                                <script type="text/javascript" src="{% static 'js/analysis-charts.js' %}"></script>
+                            </div>
+                        </div>
+                    </div>
+
+
                     <form action = "">
                         <h5 style=" position:relative; left:450px; top:35px">Member:</h5>
                         <select  style=" position:relative; left:525px; " name="Member">
                             <!-- goes through the members in the group and prints their name -->
                             {% for each in members %} 
-                                <option value="each">{{each}}</option>
+                                <option value="each">{{each.profile.name}}</option>
                             {% endfor %}
                         </select>
                     </form>
                 </form>
                 
                 
+                <svg width="1000" height="375">
+                    <text x="40" y="15" fill="Black">Graph 1</text>
+                    <rect x="40" y="20" width="350" height="350" rx="20" ry="20" style = "fill:white;stroke:black;stroke-width:1" />
+
+                    <text x="450" y="15" fill="Black">Graph 2</text>
+                    <rect x="450" y="20" width="500" height="325" style = "fill:white;stroke:black;stroke-width:1" />
+                </svg>
+
                 <div class="box box-solid">
                   <div class="box-header with-border">
                     <h3 class="box-title">Tsr Analysis Flagged #1</h3>
