--- a/teamwork/templates/projects/view_project.html
+++ b/teamwork/templates/projects/view_project.html
@@ -960,12 +960,11 @@
                 
                 
                 
-             <!--CURRENTLY HARDCODE PROTOTYPE: NOT FUNCTIONAL-->
+             <!--TSR ANALYSIS GRAPHIS TAB THAT SHOULD BE MERGED, HOW DUCKY-->
                 <form action = "">
                     <h5 style="position: relative; left:40px; top: 100px">TSR Number:</h5>
                     <select id ="choose_tsr_num" onchange="set_tsr_num()" style=" position:relative; left:150px; top: 60px" name="TSR #">
                         <option value="select">select</option>
-                        <!-- goes through each of the tsrs and print the tsr number-->
                         {% for each in assigned_tsrs %}
                             <option value="each">{{each.ass_number}}</option>
                         {% endfor %}
@@ -973,26 +972,22 @@
 
                     <script type="text/javascript">
                         function set_tsr_num(){
-                            var numOfTsr = document.getElementById("choose_tsr_num").value;
+                            var chosen_tsr = document.getElementById("choose_tsr_num").value;
                         }
                     </script>
-
-
 
                     <div class="col-md-6">
                         <div class="box box-primary">
                             <div class="panel panel-default">
                                 <div class="panel-body" style="position: relative; min-height: 170px; min-width: 100px">
-<!-- input for analysis-charts.js file-->
+                                    <!-- input for analysis-charts.js file-->
                                     <input type="hidden" id="names" name="variable" value="{{member_names}}">
-
-<!-- how to take input from dropdown list ...?-->
+                                    <input type="hidden" id="chosen_tsr" name="variable" value = chosen_tsr>
                                     <div style="position: absolute; width: 70px; height: 70px;">
                                         <canvas id="barChart" style="z-index: 1;"></canvas>
                                     </div>
                                     <div style="position: relative; top: 10px; left: 10px">
                                         <ul class="legend">
-<!-- displays name and len(name)-->
                                             {% for nameAndInfo in member_names%}
                                                 <li><h3><span style="background-color:{{nameAndInfo.2}};">
                                                     {{nameAndInfo.0}}
@@ -1004,33 +999,53 @@
                                 </div>
 
                                 <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
-                                <script type="text/javascript" src="{% static 'js/Chart.min.js' %}"></script>
-                                <script type="text/javascript" src="{% static 'js/analysis-charts.js' %}"></script>
+                                <script type="text/javascript" src="{% static 'js/allCharts.js' %}"></script>
+                                <script type="text/javascript" src="{% static 'js/tsrChart.js' %}"></script>
                             </div>
                         </div>
                     </div>
-
-
-                    <form action = "">
-                        <h5 style=" position:relative; left:450px; top:35px">Member:</h5>
-                        <select  style=" position:relative; left:525px; " name="Member">
-                            <option value="select">select</option>
-                            <!-- goes through the members in the group and prints their name -->
-                            {% for each in members %} 
-                                <option value="each">{{each.profile.name}}</option>
-                            {% endfor %}
-                        </select>
-                    </form>
                 </form>
-                
-<!--
-                <svg width="1000" height="375">
-                    <text x="40" y="15" fill="Black">Graph 1</text>
-                    <rect x="40" y="20" width="350" height="350" rx="20" ry="20" style = "fill:white;stroke:black;stroke-width:1" />
 
-                    <text x="450" y="15" fill="Black">Graph 2</text>
-                    <rect x="450" y="20" width="500" height="325" style = "fill:white;stroke:black;stroke-width:1" />
-                </svg> -->
+            <!-- END OF DUCKY -->
+
+<!-- SCRIMSHANKING IS WHAT I DO BEST. THIS IS THE FORM FOR THE MEMBERS TABLE -->
+                <form action = "">
+                    <h5 style=" position:relative; left:450px; top:35px">Member:</h5>
+                    <select id = "choose_member" onchange="set_member()" style=" position:relative; left:525px; " name="Member">
+                        <option value="select">select</option>
+                        <!-- goes through the members in the group and prints their name -->
+                        {% for each in members %} 
+                            <option value="each">{{each.profile.name}}</option>
+                        {% endfor %}
+                    </select>
+
+                    <div class="col-md-6">
+                        <div class="box box-primary">
+                            <div class="panel panel-default">
+                                <div class="panel-body" style="position: relative; min-height: 170px; min-width: 100px">
+                                    <div style="position: absolute; width: 70px; height: 70px;">
+                                        <canvas id="barChart" style="z-index: 1;"></canvas>
+                                    </div>
+                                    <div style="position: relative; top: 10px; left: 10px">
+                                        <ul class="legend">
+                                            {% for nameAndInfo in member_names%}
+                                                <li><h3><span style="background-color:{{nameAndInfo.2}};">
+                                                    {{nameAndInfo.0}}
+                                                    <b>{{nameAndInfo.1}}</b>
+                                                </span></h3></li>
+                                            {% endfor %}
+                                        </ul>
+                                    </div>
+                                </div>
+                                <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
+                                <script type="text/javascript" src="{% static 'js/allCharts.js' %}"></script>
+                                <script type="text/javascript" src="{% static 'js/memberChart.js' %}"></script>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+
+<!-- END OF SCRIMSHANKING -->
 
                 <div class="box box-solid">
                   <div class="box-header with-border">
